# k8_play

./: .gitignore  ReadMe.md  Vagrantfile  k8s_common.sh  k8s_master.sh  k8s_worker.sh
VagrantSetup/: Readme.md  Vagrantfile  base_install.sh  centos64.box  k8s_common.sh  k8s_master.sh  k8s_worker.sh  vadown.sh  vaup.sh
api/: celery.yaml  values.yaml
api/templates/: _helpers.tpl  api.yaml  celery-beat.yaml  celery-worker.yaml  configmap.yaml  deployment.yaml  secrets.yaml
app/: Dockerfile  entrypoint.sh  manage.py  pyproject.toml
app/chuthe/: asgi.py  settings.py  urls.py  wsgi.py
app/helm/: Chart.yaml  values.yaml
app/helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
app/helm/templates/tests/: test-connection.yaml
app/k8s/: chuthe_dep.yaml  chuthe_frontend.yml  chuthe_ing.yaml  chuthe_ns.yaml  chuthe_svc.yaml
app/user/migrations/: 0001_initial.py
backend/: chuthe_dep.yaml  chuthe_svc.yaml  configmap.yaml  secretmap.yaml  values.yaml
backend.bak/: chuthe_dep.yaml  chuthe_svc.yaml  configmap.yaml  secretmap.yaml
backend/templates/: api.yaml  celery.yaml  configmap.yaml  deployment.yaml  secrets.yaml
elasticsearch/: values.yaml
elasticsearch/templates/: service.yaml  statefulset.yaml
filebeat/: values.yaml
filebeat/templates/: clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  (+4 more)
ingress/: controller.yaml  values.yaml
metallb/: values.yaml
nginx/: values.yaml
postgresql/: values.yaml  values.yaml.bak
rabbitmq/: values.yaml
rabbitmq-operator/: values.yaml
(+53 files in other folders)
