[tool.poetry]
name = "chuthe"
version = "0.0.0"
description = "chuthe api"
authors = ["bboyadao <anh.nguyen@pdsolution.vn>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.2"
gunicorn = "^20.1.0"
djangorestframework = "^3.13.1"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
